# rixing

./: .gitignore  LICENSE  PRD_and_UI_Spec.md  PRD_防休眠.md  README.md  README.zh-CN.md  package.json  pnpm-lock.yaml
.claude/: launch.json
.trae/rules/: git-commit-message.md
.workbuddy/memory/: 2026-07-11.md  2026-07-12.md  2026-07-13.md  2026-07-14.md  2026-07-15.md  2026-07-16.md  2026-07-17.md  2026-07-18.md  MEMORY.md
assets/: make_icons.py
docs/: _hero.html  i18n.js  index.html  promotion-copy.md
src/: calendar.html  calendar.js  focus-music.html  focus-music.js  i18n.js  index.html  renderer.js  settings.html  settings.js  style.css  theme.css  translate.html  translate.js  ui-common.js
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.international.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/python/: mrt2_bridge.py
src-tauri/src/: focus_music.rs  main.rs  tiling.rs
src/translate/: translate.css  translate.js
